--- a/style.css
+++ b/style.css
@@ -10,4 +10,12 @@
 
 .container__color {
   color: #8a2be2;
+}
+
+.nav {
+  display: flex;
+  gap: 16px;
+}
+.nav__link {
+  text-decoration: none;
 }/*# sourceMappingURL=style.css.map */
