--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@
   gap: 16px;
 }
 .content__item {
+  height: 200px;
   width: 300px;
   border: 1px solid #000;
 }/*# sourceMappingURL=style.css.map */
