--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
   box-sizing: border-box;
 }
 
+.fonts, .content__item {
+  font-family: sans-serif;
+  font-style: normal;
+  text-align: center;
+}
+
 .container {
   width: 1200px;
 }
@@ -21,6 +27,10 @@
 }
 
 .content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
   display: flex;
   gap: 16px;
 }
