--- a/style.scss
+++ b/style.scss
@@ -1,13 +1,18 @@
 // Переменные для файла
-$widthSite: 1200px;
-$colorMainSite: #8a2be2;
-$gap: 16px;
-$border: 1px solid #000;
+@import 'vars';
+@import 'mix';
 
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+// наследование стиль
+.fonts {
+    font-family: sans-serif;
+    font-style: normal;
+    text-align: center;
 }
 
 .container {
@@ -28,10 +33,15 @@ $border: 1px solid #000;
 }
 
 .content {
+    // добавляем примесь в блок
+    @include displayFlex;
+
     display: flex;
     gap: $gap;
 
     &__item {
+        // добавляем наследование класса
+        @extend .fonts;
         height: 200px;
         width: $widthSite / 4;
         border: $border;
