--- a/css/style.css
+++ b/css/style.css
@@ -106,21 +106,21 @@ body {
     padding-left: 16px;
 }
 
-.hero-text-head {
+.hero-text__head {
     color: #222;
     font-family: 'Lato';
     font-size: 48px;
     font-weight: 900;
 }
 
-.hero-text-midle {
+.hero-text__midle {
     color: #222;
     font-family: 'Lato';
     font-size: 32px;
     font-weight: 700;
 }
 
-.hero-text-red {
+.hero-text__red {
     color: #F16D7F;
 }
 
