--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,7 @@ body {
     transition: transform 1s ease-in-out, -webkit-transform 1s ease-in-out;
 }
 
-.proposals-item-img {
+.proposals-item__img {
     position: relative;
     z-index: -1;
     width: 100%;
@@ -170,13 +170,13 @@ body {
             transform: translateY(-1.1%);
 }
 
-.proposals-item-big {
+.proposals-item__big {
     -ms-grid-column: 1;
     -ms-grid-column-span: 3;
     grid-column: 1/4;
 }
 
-.proposal-item-text {
+.proposal-item__text {
     /* ставим абсолют туда куда хотим повесить картину */
     position: absolute;
     color: #FFF;
@@ -186,7 +186,7 @@ body {
     text-transform: uppercase;
 }
 
-.proposal-item-red {
+.proposal-item__red {
     color: #F16D7F;
     font-family: 'Lato';
     font-size: 24px;
