обновление классов по блоку продукты зголовок

--- a/css/media.css
+++ b/css/media.css
@@ -178,7 +178,7 @@
         padding-bottom: 64px;
     }
 
-    .products-title-text {
+    .products-title__text {
         text-align: center;
     }
 
