обновление классов по блоку subscribe

--- a/css/media.css
+++ b/css/media.css
@@ -145,7 +145,7 @@
         background-position: 27%;
     }
 
-    .subscrybe-paragraf {
+    .subscrybe-comment__paragraf {
         font-size: 18px;
     }
 
@@ -195,7 +195,7 @@
         line-height: 1.5;
     }
 
-    .subscrybe-paragraf {
+    .subscrybe-comment__paragraf {
         font-size: 18px;
     }
 
