--- a/css/style.scss
+++ b/css/style.scss
@@ -5,6 +5,9 @@
 * Browsers: last 4 version
 */
 
+$colorMainSite: #222222;
+$backgroundColor: #ffffff;
+
 * {
     padding: 0;
     margin: 0;
@@ -26,7 +29,7 @@ body {
 
 /* шапка сайта */
 .main-header {
-    background-color: #222;
+    background-color: $backgroundColor;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -107,14 +110,14 @@ body {
 }
 
 .hero-text__head {
-    color: #222;
+    color: #222222;
     font-family: 'Lato';
     font-size: 48px;
     font-weight: 900;
 }
 
 .hero-text__midle {
-    color: #222;
+    color: #222222;
     font-family: 'Lato';
     font-size: 32px;
     font-weight: 700;
@@ -235,7 +238,7 @@ body {
 }
 
 .products-title__head {
-    color: #222;
+    color: #222222;
     font-family: 'Lato';
     font-size: 30px;
 }
