--- a/css/style.scss
+++ b/css/style.scss
@@ -6,7 +6,9 @@
 */
 
 $colorMainSite: #222222;
-$backgroundColor: #ffffff;
+$colorPink: #F16D7F;
+$colortWite: #ffffff;
+$contantWidth: 1140px;
 
 * {
     padding: 0;
@@ -23,13 +25,13 @@ body {
 
 /* Общее центрирование */
 .center {
-    padding-left: calc(50% - 1140px / 2);
-    padding-right: calc(50% - 1140px / 2);
+    padding-left: calc(50% - $contantWidth / 2);
+    padding-right: calc(50% - $contantWidth / 2);
 }
 
 /* шапка сайта */
 .main-header {
-    background-color: $backgroundColor;
+    background-color: $colortWite;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -40,42 +42,63 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between;
     min-height: 75px;
+    
+    .main-header-left {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        gap: 13px;
+        -webkit-box-align: end;
+        -ms-flex-align: end;
+        align-items: center;
+    }
+    &__brand {
+        font-size: 27px;
+        line-height: 32px;
+        font-weight: 300;
+        text-transform: uppercase;
+        letter-spacing: 0.025em;
+        color: $colorMainSite;
+    }
+
+    &__brand_red {
+        color: $colorPink;
+    }
+
 }
 
-.logo {
+
+
+.main-header__right {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    gap: 41px;
+    gap: 26px;
     -webkit-box-align: end;
     -ms-flex-align: end;
     align-items: flex-end;
-}
 
-.logo:hover svg path {
-    fill: #F16D7F;
-}
-
-.user-buttons {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 31px;
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: flex-end;
+    &__account {
+        background-color: $colorPink;
+        display: block;
+        border: none;
+    
+        color: $colortWite;
+        font-size: 15px;
+        padding: 13px 19px;
+    }
 }
 
 .menu:hover path {
-    fill: #F16D7F;
+    fill: $colorPink;
 }
 
 .profile:hover path {
-    fill: #F16D7F;
+    fill: $colorPink;
 }
 
 .store:hover path {
-    fill: #F16D7F;
+    fill: $colorPink;
 }
 
 /* Главный блок */
@@ -105,27 +128,28 @@ body {
 }
 
 .hero-text {
-    border-left: 12px solid #F16D7F;
+    border-left: 12px solid $colorPink;
     padding-left: 16px;
+
+    &__head {
+        color: #222222;
+        font-family: 'Lato';
+        font-size: 48px;
+        font-weight: 900;
+    }
+
+    &__midle {
+        color: #222222;
+        font-family: 'Lato';
+        font-size: 32px;
+        font-weight: 700;
+    }
+
+    &__red {
+        color: $colorPink;
+    }
 }
 
-.hero-text__head {
-    color: #222222;
-    font-family: 'Lato';
-    font-size: 48px;
-    font-weight: 900;
-}
-
-.hero-text__midle {
-    color: #222222;
-    font-family: 'Lato';
-    font-size: 32px;
-    font-weight: 700;
-}
-
-.hero-text__red {
-    color: #F16D7F;
-}
 
 /* Блок предложения и скидки */
 .proposals {
@@ -190,7 +214,7 @@ body {
 }
 
 .proposal-item__red {
-    color: #F16D7F;
+    color: $colorPink;
     font-family: 'Lato';
     font-size: 24px;
     font-weight: 700;
@@ -356,7 +380,7 @@ body {
 }
 
 .products-item__price {
-    color: #F16D7F;
+    color: $colorPink;
     font-family: 'Lato';
     font-size: 16px;
 }
@@ -540,7 +564,7 @@ body {
     font-size: 14px;
 
     padding: 16px 22px;
-    background-color: #F16D7F;
+    background-color: $colorPink;
     border: none;
     border-top-right-radius: 50px;
     border-bottom-right-radius: 50px;
@@ -606,7 +630,7 @@ body {
 
 /* режим наведения на кнопки соцсетей */
 .social-item:hover {
-    background-color: #F16D7F;
+    background-color: $colorPink;
 }
 
 .social-item:hover svg path {
