--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ body {
   justify-content: space-between;
   min-height: 75px;
 }
-.main-header .main-header-left {
+.main-header__left {
   display: flex;
   gap: 13px;
   align-items: center;
@@ -48,19 +48,42 @@ body {
 .main-header__brand_red {
   color: #F16D7F;
 }
-
+.main-header__search {
+  display: flex;
+}
+.main-header__button {
+  min-height: 38px;
+  padding-left: 14px;
+  padding-right: 26px;
+  background-color: #cdcdcc;
+  background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
+  border: 1px solid #e6e6e6;
+  border-radius: 3px 0px 0px 3px;
+}
+.main-header__input {
+  width: 317px;
+  box-sizing: border-box;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 0px 3px 3px 0px;
+  padding-left: 16px;
+  line-height: 32px;
+  font-weight: 300;
+  letter-spacing: 0.025em;
+  color: #a4a4a4;
+}
 .main-header__right {
   display: flex;
   gap: 26px;
-  align-items: flex-end;
+  align-items: center;
 }
-.main-header__right__account {
+.main-header__account {
   background-color: #F16D7F;
   display: block;
   border: none;
   color: #ffffff;
   font-size: 15px;
-  padding: 13px 19px;
+  padding: 10px 29px 10px 20px;
 }
 
 .menu:hover path {
