--- a/css/style.scss
+++ b/css/style.scss
@@ -10,6 +10,10 @@ $colorPink: #F16D7F;
 $colortWite: #ffffff;
 $contantWidth: 1140px;
 
+$bgColorSearch: #cdcdcc;
+$borderColorSearch: #e6e6e6;
+$colorTextSearch: #a4a4a4;
+
 * {
     padding: 0;
     margin: 0;
@@ -42,8 +46,9 @@ body {
     -ms-flex-pack: justify;
     justify-content: space-between;
     min-height: 75px;
-    
-    .main-header-left {
+
+    // Левая часть, лого, бренд, поиск
+    &__left {
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
@@ -52,6 +57,7 @@ body {
         -ms-flex-align: end;
         align-items: center;
     }
+
     &__brand {
         font-size: 27px;
         line-height: 32px;
@@ -65,29 +71,58 @@ body {
         color: $colorPink;
     }
 
-}
+    &__search {
+        display: flex;
+    }
 
+    &__button {
+        min-height: 38px;
+        padding-left: 14px;
+        padding-right: 26px;
+        background-color: $bgColorSearch;
+        background-image: linear-gradient(180.0deg, #f9f9f9 0%, #f5f5f5 100%);
+        border: 1px solid $borderColorSearch;
+        border-radius: 3px 0px 0px 3px;
+    }
 
+    &__input {
+        width: 317px;
+        box-sizing: border-box;
+        background-color: $colortWite;
+        border: 1px solid $borderColorSearch;
+        border-radius: 0px 3px 3px 0px;
+        padding-left: 16px;
 
-.main-header__right {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 26px;
-    -webkit-box-align: end;
-    -ms-flex-align: end;
-    align-items: flex-end;
+        line-height: 32px;
+        font-weight: 300;
+        letter-spacing: 0.025em;
+        color: $colorTextSearch;
+    }
+
+    // Праавый блок, корзина, кнопка аккаунта
+    &__right {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        gap: 26px;
+        -webkit-box-align: end;
+        -ms-flex-align: end;
+        align-items: center;
+    }
 
     &__account {
         background-color: $colorPink;
         display: block;
         border: none;
-    
+
         color: $colortWite;
         font-size: 15px;
-        padding: 13px 19px;
+        padding: 10px 29px 10px 20px;
     }
+
 }
+
+
 
 .menu:hover path {
     fill: $colorPink;
