--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,10 @@ body {
 }
 .main-header__search {
   display: flex;
+  align-items: center;
 }
 .main-header__button {
-  min-height: 38px;
+  height: 38px;
   padding-left: 14px;
   padding-right: 26px;
   background-color: #cdcdcc;
@@ -61,16 +62,26 @@ body {
   border-radius: 3px 0px 0px 3px;
 }
 .main-header__input {
-  width: 317px;
+  height: 38px;
   box-sizing: border-box;
   background-color: #ffffff;
   border: 1px solid #e6e6e6;
-  border-radius: 0px 3px 3px 0px;
   padding-left: 16px;
   line-height: 32px;
   font-weight: 300;
   letter-spacing: 0.025em;
   color: #a4a4a4;
+}
+.main-header__input_search {
+  width: 279px;
+}
+.main-header__input_find {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 38px;
+  padding-left: 0;
+  border-radius: 0px 3px 3px 0px;
 }
 .main-header__right {
   display: flex;
