--- a/css/style.scss
+++ b/css/style.scss
@@ -73,10 +73,11 @@ body {
 
     &__search {
         display: flex;
+        align-items: center;
     }
 
     &__button {
-        min-height: 38px;
+        height: 38px;
         padding-left: 14px;
         padding-right: 26px;
         background-color: $bgColorSearch;
@@ -86,17 +87,31 @@ body {
     }
 
     &__input {
-        width: 317px;
+        height: 38px;
         box-sizing: border-box;
         background-color: $colortWite;
         border: 1px solid $borderColorSearch;
-        border-radius: 0px 3px 3px 0px;
+        // border-radius: 0px 3px 3px 0px;
         padding-left: 16px;
 
         line-height: 32px;
         font-weight: 300;
         letter-spacing: 0.025em;
         color: $colorTextSearch;
+    }
+
+    &__input_search {
+        width: 279px;
+    }
+
+    &__input_find {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        width: 38px;
+        padding-left: 0;
+        border-radius: 0px 3px 3px 0px;
     }
 
     // Праавый блок, корзина, кнопка аккаунта
