--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,9 @@ body {
   justify-content: space-between;
   height: 100px;
 }
+.main-header__link {
+  text-decoration: none;
+}
 .main-header__left {
   display: flex;
   gap: 13px;
@@ -57,7 +60,7 @@ body {
   height: 38px;
   padding-left: 14px;
   padding-right: 10px;
-  background-color: #cdcdcc;
+  background-color: #e8e8e8;
   background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
   border: 1px solid #e6e6e6;
   border-radius: 3px 0px 0px 3px;
@@ -103,12 +106,29 @@ body {
   font-size: 15px;
 }
 
-.menu:hover path {
-  fill: #f16d7f;
+.navigation {
+  height: 51px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
 }
 
-.profile:hover path {
-  fill: #f16d7f;
+.menu {
+  display: flex;
+  justify-content: center;
+  gap: 48px;
+  background-color: 1140px;
+}
+.menu__list {
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+  color: #222222;
+  list-style: none;
+}
+.menu__link {
+  text-decoration: none;
+  color: #222222;
 }
 
 .store:hover path {
