--- a/css/style.scss
+++ b/css/style.scss
@@ -10,7 +10,7 @@ $colorPink: #f16d7f;
 $colortWite: #ffffff;
 $contantWidth: 1140px;
 
-$bgColorSearch: #e8e8e8;
+$bgColorMain: #e8e8e8;
 $borderColorSearch: #e6e6e6;
 $colorTextSearch: #a4a4a4;
 
@@ -76,7 +76,7 @@ body {
         height: 38px;
         padding-left: 14px;
         padding-right: 10px;
-        background-color: $bgColorSearch;
+        background-color: $bgColorMain;
         background-image: linear-gradient(180deg, #f9f9f9 0%, #f5f5f5 100%);
         border: 1px solid $borderColorSearch;
         border-radius: 3px 0px 0px 3px;
@@ -136,6 +136,10 @@ body {
     }
 }
 
+.store:hover path {
+    fill: $colorPink;
+}
+
 // Главная навигация сайта
 .navigation {
     height: 51px;
@@ -165,58 +169,62 @@ body {
     }
 }
 
-.store:hover path {
-    fill: $colorPink;
+.hero {
+    padding-bottom: 49px;
+    // display: flex;
+    // gap: 64px;
+    padding-left: calc(50% - 1600px / 2);
+    padding-right: calc(50% - 1600px / 2);
+    // background: #f1e4e6;
+
+    &__content {
+        position: relative;
+    }
+
+    // &__text {
+    //     top: 224px;
+    //     position: absolute;    
+    // }
+
+    // &__span {
+    //     width: 5px;
+    //     background-color: $colorPink;
+    // }
 }
 
 /* Главный блок */
-.hero {
-    margin-bottom: 64px;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    gap: 64px;
-    padding-left: calc(50% - 1600px / 2);
-    padding-right: calc(50% - 1600px / 2);
-    background: #f1e4e6;
-}
 
-.hero-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    padding-bottom: 96px;
-}
+// .hero-content {
+//     display: flex;
 
-.hero-text {
-    border-left: 12px solid $colorPink;
-    padding-left: 16px;
+//     flex-direction: column;
 
-    &__head {
-        color: #222222;
-        font-family: "Lato";
-        font-size: 48px;
-        font-weight: 900;
-    }
+//     justify-content: center;
+//     padding-bottom: 96px;
+// }
 
-    &__midle {
-        color: #222222;
-        font-family: "Lato";
-        font-size: 32px;
-        font-weight: 700;
-    }
+// .hero-text {
+//     border-left: 12px solid $colorPink;
+//     padding-left: 16px;
 
-    &__red {
-        color: $colorPink;
-    }
-}
+//     &__head {
+//         color: #222222;
+//         font-family: "Lato";
+//         font-size: 48px;
+//         font-weight: 900;
+//     }
+
+//     &__midle {
+//         color: #222222;
+//         font-family: "Lato";
+//         font-size: 32px;
+//         font-weight: 700;
+//     }
+
+//     &__red {
+//         color: $colorPink;
+//     }
+// }
 
 /* Блок предложения и скидки */
 .proposals {
