--- a/css/style.scss
+++ b/css/style.scss
@@ -174,13 +174,13 @@ body {
 
 .hero {
     background-image: url(../img/main-photo.png);
-    // background-color: rgba(244, 244, 244, 0.7);
     background-blend-mode: overlay;
     background-size: cover;
-    height: 665px;
-    // display: flex;
-    // justify-content: space-between;
-    // align-items: center;
+    height: 615px;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hero-text {
@@ -208,75 +208,7 @@ body {
 
 
 /* Блок предложения и скидки */
-.proposals {
-    display: -ms-grid;
-    display: grid;
-    gap: 30px;
-    -ms-grid-columns: 1fr 30px 1fr 30px 1fr;
-    grid-template-columns: repeat(3, 1fr);
-    margin-bottom: 48px;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-}
 
-.proposals-item {
-    background: rgba(33, 22, 22, 0.7);
-    position: relative;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    -ms-flex-wrap: nowrap;
-    flex-wrap: nowrap;
-    -webkit-transition: -webkit-transform 1s ease-in-out;
-    transition: -webkit-transform 1s ease-in-out;
-    -o-transition: transform 1s ease-in-out;
-    transition: transform 1s ease-in-out;
-    transition:
-        transform 1s ease-in-out,
-        -webkit-transform 1s ease-in-out;
-}
-
-.proposals-item__img {
-    position: relative;
-    z-index: -1;
-    width: 100%;
-}
-
-.proposals-item:hover {
-    -webkit-transform: translateY(-1.1%);
-    -ms-transform: translateY(-1.1%);
-    transform: translateY(-1.1%);
-}
-
-.proposals-item__big {
-    -ms-grid-column: 1;
-    -ms-grid-column-span: 3;
-    grid-column: 1/4;
-}
-
-.proposal-item__text {
-    /* ставим абсолют туда куда хотим повесить картину */
-    position: absolute;
-    color: #fff;
-    text-align: center;
-    font-family: "Lato";
-    font-size: 16px;
-    text-transform: uppercase;
-}
-
-.proposal-item__red {
-    color: $colorPink;
-    font-family: "Lato";
-    font-size: 24px;
-    font-weight: 700;
-}
 
 /* Блок продукты */
 .products {
