работа над полем предложения, добавил 4 фото и текст

--- a/css/style.css
+++ b/css/style.css
@@ -167,6 +167,10 @@ body {
 }
 
 /* Блок предложения и скидки */
+.offers {
+  padding-top: 98px;
+}
+
 /* Блок продукты */
 .products {
   padding-top: 48px;
